# MiniBackup

./: CMakeLists.txt  README.md
include/: compressor.hpp  engine.hpp  storage.hpp
src/: compressor.cpp  engine.cpp  main.cpp  storage.cpp
tests/: test_logic.cpp
